# autonomous2018-ssu

./: .gitmodules  README.md
ClassDiagram/: 전체다이어그램.mdj
Control/highlevel_controller/: CMakeLists.txt  package.xml  readme.important
Control/highlevel_controller/cfg/: hl_controller.yaml
Control/highlevel_controller/include/highlevel_controller/: HybridAutomata.h  StateHandler.h  base_parameter.h  condition.h  goalSender.h  stateMachine.h
Control/highlevel_controller/launch/: highlevel_controller.launch
Control/highlevel_controller/msg/: params.msg
Control/highlevel_controller/src/: HybridAutomata.cpp  StateHandler.cpp  base_parameter.cpp  condition.cpp  fake_param_setter.cpp  goalSender.cpp  highlevel_controller.cpp  stateMachine.cpp
Control/platform_tx/: CMakeLists.txt
Control/platform_tx/include/platform_tx/: pid_controller.h
Control/platform_tx/launch/: platform_tx.launch
Control/platform_tx/src/: ackermann_pub.cpp  platform_tx.cpp
move_base_ssu/: CMakeLists.txt  package.xml
move_base_ssu/cfg/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  lowlevel_controller.yaml  pose_estimation_params.yaml  send_goal.yaml  sensor_setup_params.yaml  teb_local_planner_params.yaml
move_base_ssu/launch/: gmapping_no_camera.launch  gmapping_no_lidar.launch  move_base_ssu.launch  robot_setup_ssu.launch  robot_setup_tmp.launch  send_goal_test.launch
move_base_ssu/maps/: back_of_ssara.yaml  final.yaml  front_of_library.yaml  front_of_three.yaml  hl_tmp.yaml  jingy_garden.pgm  jingy_garden.yaml  jinry.pgm  jinry.yaml  jinry_final.pgm  jinry_final.yaml  jinry_full.yaml  jinry_full2.yaml  map.pgm  namu.pgm  namu.yaml  parking_camera.yaml  parking_camera2.yaml  parking_lot2.yaml  playground.pgm  playground.yaml  re_jinry.yaml  real_the_place.yaml  ssara.pgm  ssara.yaml  test.pgm  test.yaml  test2.yaml  the_place.yaml  the_place2.yaml
move_base_ssu/src/: send_goal.cpp
ros예제/ros_tutorials_action/: CMakeLists.txt  package.xml
ros예제/ros_tutorials_topic/: CMakeLists.txt  package.xml
ros예제/ros_tutorials_topic/src/: topic_subscriber.cpp
ros예제/send_goal_test_with_fake/: CMakeLists.txt  package.xml
ros예제/send_goal_test_with_fake/cfg/: send_goal.yaml
ros예제/send_goal_test_with_fake/launch/: send_goal_test_client.launch
ros예제/send_goal_test_with_fake/src/: move_base_client.cpp  move_base_server.cpp
sensor_configurator/: CMakeLists.txt  package.xml
sensor_configurator/GPS/gps_common/include/gps_common/: Initial_UTM.h
sensor_configurator/GPS/gps_common/launch/: LL_UTM.launch
sensor_configurator/GPS/gps_common/src/: utm_odometry_node.cpp
sensor_configurator/GPS/nmea_navsat_driver/: CMakeLists.txt
sensor_configurator/GPS/nmea_navsat_driver/launch/: gpsdriver.launch
sensor_configurator/GPS/nmea_navsat_driver/scripts/: nmea_serial_driver
sensor_configurator/GPS/nmea_navsat_driver/src/: GPS_test.cpp
sensor_configurator/GPS/nmea_navsat_driver/src/libnmea_navsat_driver/: driver.py
sensor_configurator/LMS1xx-master/src/: LMS1xx_node.cpp
sensor_configurator/improve_lidar/: CMakeLists.txt  package.xml
sensor_configurator/improve_lidar/cfg/: dynamic.yaml
sensor_configurator/improve_lidar/launch/: improve_lidar.launch
sensor_configurator/improve_lidar/src/: improve_lidar.cpp
sensor_configurator/imu/: CMakeLists.txt  package.xml
sensor_configurator/imu/include/: IMUConfigurator.h
sensor_configurator/imu/launch/: covariance_changer.launch  imu.launch
sensor_configurator/imu/msg/: IMU_data.msg
sensor_configurator/imu/src/: IMUConfigurator.cpp  covariance_changer.cpp  imu_main.cpp
sensor_configurator/include/: IMUConfigurator.h  IMUParameter.h  SensorConfigurator.h  SerialCommunicator.h
sensor_configurator/laser_filters/: autonomous2018.yaml  laser_filters.launch
sensor_configurator/laser_filters/cfg/: dynamic_cut.yaml  range_cut.yaml  uturn_cut.yaml
sensor_configurator/laser_filters/launch/: dynamic_cut.launch
sensor_configurator/lms1xx/src/: LMS1xx_node.cpp
sensor_configurator/nmea_navsat_driver/: CMakeLists.txt
sensor_configurator/nmea_navsat_driver/launch/: GPS.launch  gpssubscriber.launch
sensor_configurator/nmea_navsat_driver/msg/: MyMsg.msg
sensor_configurator/nmea_navsat_driver/scripts/: nmea_serial_driver  nmea_topic_serial_reader
sensor_configurator/nmea_navsat_driver/src/: GPS_subscriber.cpp  GPS_transformer.cpp
sensor_configurator/obstacle_detector/launch/: nodes.launch
sensor_configurator/platform_rx/: CMakeLists.txt  package.xml
sensor_configurator/platform_rx/include/: IMUParameter.h  PlatformRX.h  PlatformRxParameter.h
sensor_configurator/platform_rx/launch/: platform_rx.launch
sensor_configurator/platform_rx/msg/: PlatformRX_msg.msg
sensor_configurator/platform_rx/src/: PlatformRX.cpp  platform_rx_main_node.cpp  platformrx_main_node.cpp  test_main_node.cpp
sensor_configurator/platform_rx_msg/msg/: platform_rx_msg.msg
sensor_configurator/platform_rx_thread_test/: CMakeLists.txt
sensor_configurator/platform_rx_thread_test/launch/: platform_rx.launch
sensor_configurator/platform_rx_thread_test/src/: platform_rx_thread_test.cpp
sensor_configurator/platform_tx/: CMakeLists.txt  package.xml
sensor_configurator/platform_tx/include/: platformtx_data.h
sensor_configurator/platform_tx/src/: platformtx_pub.cpp  platformtx_sub.cpp
sensor_configurator/sensor_launch/: CMakeLists.txt  package.xml
sensor_configurator/sensor_launch/cfg/: sensor_params.yaml
sensor_configurator/sensor_launch/launch/: sensor_launch.launch  sensor_launch_no_camera.launch  sensor_launch_no_lidar.launch
sensor_configurator/src/: IMUConfigurator.cpp  SensorConfigurator.cpp  SerialCommunicator.cpp  imu_test_main_node.cpp  test_main_node.cpp
vision/: README.md  (+1 more)
vision/lane_detection/: CMakeLists.txt
vision/lane_detection/include/preprocessing/: preLaneDetect.hpp
vision/lane_detection/launch/: start.launch
vision/lane_detection/param/: param.yaml
vision/lane_detection/src/: lane_detection.cpp  lane_detection2.cpp  preLaneDetect.cpp
(+130 files in other folders)
