<?xml version="1.0"?>
<package>
  <name>platform_rx</name>
  <version>0.0.0</version>
  <description>call me "WhiteHerb"</description>

  <author email="sjrnfu12@gmail.com">WhiteHerb</author>

  <maintainer email="sjrnfu12@gmail.com">WhiteHerb</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>platform_rx_msg</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
